# finally

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
.claude/: settings.json
backend/: pyproject.toml
backend/app/: config.py  main.py  state.py
backend/app/api/: chat.py  health.py  portfolio.py  watchlist.py
backend/app/db/: __init__.py  connection.py  repo.py  schema.py
backend/app/llm/: __init__.py  client.py  mock.py  schema.py
backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive.py  models.py  seed_prices.py  simulator.py  stream.py
backend/app/services/: portfolio.py  watchlist.py
backend/tests/: conftest.py
backend/tests/api/: test_routes.py
backend/tests/db/: test_db.py
backend/tests/llm/: test_chat.py  test_mock.py  test_schema.py
backend/tests/market/: test_cache.py  test_factory.py  test_interface.py  test_massive.py  test_models.py  test_simulator.py  test_stream.py
backend/tests/services/: test_portfolio.py  test_watchlist.py
frontend/: package-lock.json  package.json
planning/: MARKET_DATA_REVIEW.md  MARKET_DATA_SUMMARY.md  MARKET_INTERFACE.md  MASSIVE_API.md  PLAN.md  REVIEW.md  TEAM.md  TEAM_NOTES.md
planning/archive/: MARKET_DATA_DESIGN.md  MARKET_SIMULATOR.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: README.md  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
test/e2e/: 01-fresh-start.spec.ts  02-watchlist.spec.ts  03-trade.spec.ts  04-visualization.spec.ts  05-chat.spec.ts  06-sse-resilience.spec.ts  (+1 more)
(+17 files in other folders)
